// Licensed to Apache Software Foundation (ASF) under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. Apache Software Foundation (ASF) licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package banyandb.stream.v1;

import "banyandb/common/v1/common.proto";
import "banyandb/model/v1/common.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/apache/skywalking-banyandb/api/proto/banyandb/stream/v1";
option java_package = "org.apache.skywalking.banyandb.stream.v1";

message ElementValue {
  // element_id could be span_id of a Span or segment_id of a Segment in the context of stream
  string element_id = 1;
  // timestamp is in the timeunit of milliseconds. It represents
  // 1) either the start time of a Span/Segment,
  // 2) or the timestamp of a log
  google.protobuf.Timestamp timestamp = 2;
  // the order of tag_families' items match the stream schema
  repeated model.v1.TagFamilyForWrite tag_families = 3;
}

message WriteRequest {
  // the metadata is only required in the first write.
  common.v1.Metadata metadata = 1 [(validate.rules).message.required = true];
  // the element is required.
  ElementValue element = 2 [(validate.rules).message.required = true];
}

message WriteResponse {}

message InternalWriteRequest {
  uint32 shard_id = 1;
  bytes series_hash = 2;
  repeated model.v1.TagValue entity_values = 3;
  WriteRequest request = 4;
}
